changed Java version to Java 17