@@ -1,5 +1,7 @@
 package de.dknuth.adventofcode23.day;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class DayFactory {
 
     private DayFactory() {
@@ -7,10 +9,11 @@ public class DayFactory {
 
     public static <T extends Day> Day create(Class<T> dayClass) {
         try {
-            Day instance = dayClass.newInstance();
+            Day instance = dayClass.getDeclaredConstructor().newInstance();
             instance.init();
             return instance;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException e) {
             e.printStackTrace();
         }
         return null;
